docs-archive/apache-airflow-providers-airbyte/2.1.1/_sources/_api/airflow/providers/airbyte/hooks/airbyte/index.rst.txt
:py:mod:`airflow.providers.airbyte.hooks.airbyte`
=================================================

.. py:module:: airflow.providers.airbyte.hooks.airbyte


Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.airbyte.hooks.airbyte.AirbyteHook




.. py:class:: AirbyteHook(airbyte_conn_id: str = 'airbyte_default', api_version: str = 'v1')

   Bases: :py:obj:`airflow.providers.http.hooks.http.HttpHook`

   Hook for Airbyte API

   :param airbyte_conn_id: Required. The name of the Airflow connection to get
       connection information for Airbyte.
   :type airbyte_conn_id: str
   :param api_version: Optional. Airbyte API version.
   :type api_version: str

   .. py:attribute:: conn_name_attr
      :annotation: = airbyte_conn_id

      

   .. py:attribute:: default_conn_name
      :annotation: = airbyte_default

      

   .. py:attribute:: conn_type
      :annotation: = airbyte

      

   .. py:attribute:: hook_name
      :annotation: = Airbyte

      

   .. py:attribute:: RUNNING
      :annotation: = running

      

   .. py:attribute:: SUCCEEDED
      :annotation: = succeeded

      

   .. py:attribute:: CANCELLED
      :annotation: = cancelled

      

   .. py:attribute:: PENDING
      :annotation: = pending

      

   .. py:attribute:: FAILED
      :annotation: = failed

      

   .. py:attribute:: ERROR
      :annotation: = error

      

   .. py:attribute:: INCOMPLETE
      :annotation: = incomplete

      

   .. py:method:: wait_for_job(self, job_id: Union[str, int], wait_seconds: float = 3, timeout: Optional[float] = 3600) -> None

      Helper method which polls a job to check if it finishes.

      :param job_id: Required. Id of the Airbyte job
      :type job_id: str
      :param wait_seconds: Optional. Number of seconds between checks.
      :type wait_seconds: float
      :param timeout: Optional. How many seconds wait for job to be ready.
          Used only if ``asynchronous`` is False.
      :type timeout: float


   .. py:method:: submit_sync_connection(self, connection_id: str) -> Any

      Submits a job to a Airbyte server.

      :param connection_id: Required. The ConnectionId of the Airbyte Connection.
      :type connection_id: str


   .. py:method:: get_job(self, job_id: int) -> Any

      Gets the resource representation for a job in Airbyte.

      :param job_id: Required. Id of the Airbyte job
      :type job_id: int


   .. py:method:: test_connection(self)

      Tests the Airbyte connection by hitting the health API



